# wallpaper-gen

./: Cargo.toml
res/: shader.wgsl
src/: camera.rs  config.rs  main.rs  pipeline.rs  renderer.rs  state.rs  vertex.rs
