[package]
name = "wallpaper-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.1", features = ["derive"] }
env_logger = "0.9.1"
futures-intrusive = "0.4.0"
glam = "0.21.3"
image = { version = "0.24.3", default-features = false, features = ["png"] }
log = "0.4.17"
pollster = "0.2.5"
wgpu = "0.13.1"
