[package]
name = "wallpaper-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.1", features = ["derive"] }
env_logger = "0.9.1"
futures-intrusive = "0.4.0"
glam = "0.21.3"
png = "0.17.6"
pollster = "0.2.5"
tinyrand = "0.5.0"
wgpu = "0.13.1"
